css/calendar.css
/* ... */
select:focus {
	outline: none;
}

/* 
The Buttons and related paraphenalia 
---------------------------------------------------------------------------------------------------- */

#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button {
 -moz-box-sizing: content-box !important;
 box-sizing: content-box !important;
 border: 1px solid #ccc;
 padding: 5px 10px;
 border-radius: 0px;
 background: #fff;
 box-shadow: none;
 text-shadow: 0px 0px 0px #fff;
 word-wrap: normal;
 font-weight: 400;
 font-size: .8em;
 opacity: 1;
 margin-right: 1px;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-prev, #espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-next {
 padding: 10px 0.6em;
 color: #fff;
 text-shadow: 0px 0px 0px #fff;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-prev, #espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-month {
 font-size: .8em;
 padding: 5px 10px;
 color: #777;
 border-top-left-radius: 1px;
 border-bottom-left-radius: 1px;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-next, #espresso_calendar:not(.ui-widget).calendar_fullsize .fc-button-today {
 font-size: .8em;
 padding: 5px 10px;
 color: #777;
 border-top-right-radius: 1px;
 border-bottom-right-radius: 1px;
}
#espresso_calendar:not(.ui-widget) .fc-button .fc-icon-wrap {
 top: auto;
 float: none;
}
#espresso_calendar:not(.ui-widget) .fc-button .fc-icon-wrap .ui-icon {
 top: auto;
 float: none;
 margin: 14.5px auto 0;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-header-space {
 display: inline-block;
 padding: 0;
 width: 1px;
 height: 45px;
 background: #fff;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-text-arrow {
 color: #777A80;
 text-shadow: .5px .5px 0px #fff;
}

/* Miscellaneous Calendar Styles */

#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-other-month {
 background: #fcfcfc;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-state-highlight {
 background: #FEFEDF;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-day-number {
 color: #777;
 font-size: 1em;
 line-height: 2;
}
#espresso_calendar:not(.ui-widget).calendar_fullsize .fc-view-agendaDay .fc-agenda-body td div {
 min-height: 50px;
}
#espresso_calendar:not(.ui-widget) .fc-state-active, #espresso_calendar:not(.ui-widget) .fc-state-hover, #espresso_calendar:not(.ui-widget) .fc-state-hover .fc-text-arrow {
 color: #2F3334 !important;
}
#espresso_calendar:not(.ui-widget) .fc-state-disabled {
 display: none;
 color: #999;
}
#espresso_calendar td {
	padding: 0;
}
#espresso_calendar .fc-grid .fc-day-number {
	padding: 0 .5em;
}
#espresso_calendar:not(.ui-widget) .fc-event {
 margin: 0 1.5px 3px;
 border: none;
 border-radius: 0;
 background-color:	#007BAE;
 font-size: 85%;
 line-height: 1;
}
#espresso_calendar.calendar_widget .fc-event {
	margin: 0 0 2px;
	padding: 0px;
	min-height: 15px;
}
#espresso_calendar .fc-event a {
	letter-spacing: -.5px;
}
#espresso_calendar .fc-event a:hover {
	text-shadow: none;
}
/*#espresso_calendar:not(.ui-widget) .fc-event.expired {
 background: #EEEEE6 !important;
 color: #999 !important;
}*/
/* Event Styles
---------------------------------------------------------------------------------------------------- */

#espresso_calendar .fc-event-title {
	display: block;
	padding: 6px 4px 4px;
	font-size: 14px;
}

/*This is the time above the title in aganeda view.*/
.fc-event-time {
	display:none;
}

#espresso_calendar .time-display-block {
	margin: 0;
	padding: 4px;
	display:block;
}

#espresso_calendar .thumb-wrap {
	display: block;
	overflow: hidden;
	padding: 10px 0 0;
	max-width: 150px;
	vertical-align: middle;
}
#espresso_calendar .thumb-wrap img {
	max-width: 150px;
	width: 100%;
	border-radius: 0;
	box-shadow: none;
	vertical-align: middle;
	opacity: 0.7;
}
#espresso_calendar .thumb-wrap img:hover {
	opacity: 1;
	filter: alpha(opacity=100);
	zoom: 1;
	-webkit-transition: all 1s ease-in-out;
	-moz-transition: all 1s ease-in-out;
	-o-transition: all 1s ease-in-out;
	transition: all 1s ease-in-out;
}
#espresso_calendar .fc-view-agendaWeek .thumb-wrap {
	overflow: hidden;/*max-height: 20px;*/
}
#espresso_calendar .fc-view-agendaDay .thumb-wrap {
	height: auto;
}
#espresso_calendar .fc-widget-header {
	font-weight: 400;
}
/* Category Legend Styles
---------------------------------------------------------------------------------------------------- */

div#espreso-category-legend {
	clear: both;
	margin: 0;
	padding: 0;
}
div#espreso-category-legend ul {
	float:left;
	margin: 0 0 10px 0;
	padding: 0;
}
div#espreso-category-legend li {
	list-style: none;
	margin: 0 10px 5px 0;
	padding: 0 7px 0 7px;
	float:left;
}
/* Tooltip Styles
---------------------------------------------------------------------------------------------------- */

.qtip, .ui-helper-reset {
	border: 1px solid #ccc;
	padding: 10px;
}
.ui-tooltip-title {
	font-size: 1.2em;
	font-weight: 600;
	margin: 10px;
}
.ui-tooltip-content p {
	font-size: 1em;
	line-height: 1.4;
	padding: 10px 10px 0 10px;
}
p.time_cal_qtip {
	padding: 10px;
	margin: 10px;
	border-top: 1px dashed #ccc;
	border-bottom: 1px dashed #ccc;
}
.qtip-close .ui-icon {
	margin: 0 !important;
}
.attendee_limit_qtip, .time_cal_qtip {
	margin: 1em 0;
	font-weight: 400;
}
.sold-out-dv, .reg-now-btn {
	display: inline-block;
	float: right;
	margin: 10px;
	padding: .5em 1em .5em;
	border-radius: 2px;
	color: #FFF;
	text-decoration: none;
	font-weight: 400;
	font-size: 1em;
	line-height: 2;
}
a.reg-now-btn:hover {
	color: #777;
	text-decoration:	none;
}
a.reg-now-btn {
	box-sizing: content-box !important;
	border: 1px solid #ccc;
	padding: 5px 10px;
	border-radius: 0px;
	background: #fff;
	box-shadow: none;
	text-shadow: 0px 0px 0px #fff;
	word-wrap: normal;
	font-weight: 400;
	font-size: 1em;
	color: #777;
}
.sold-out-dv {
	background: #E44064;
}
.ui-state-active.reg-now-btn:hover {
	background: #777;
	color: #fff;
	text-decoration: underline;
}
/* ... */

